integrations/salesforce/mdapi/objects/Branch__c.object
<CustomObject>
    <label>Branch</label>
    <pluralLabel>Branches</pluralLabel>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Text</type>
        <length>80</length>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Text</type>
        <length>80</length>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <type>Text</type>
        <length>20</length>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Text</type>
        <length>80</length>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <type>Number</type>
        <precision>9</precision>
        <scale>6</scale>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>6</scale>
    </fields>
    <fields>
        <fullName>Operating_Hours__c</fullName>
        <label>Operating Hours</label>
        <type>LongTextArea</type>
        <length>4000</length>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <label>Manager Name</label>
        <type>Text</type>
        <length>120</length>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <label>Is Active</label>
        <type>Checkbox</type>
        <defaultValue>true</defaultValue>
    </fields>
    <fields>
        <fullName>Dealership__c</fullName>
        <label>Dealership</label>
        <type>Lookup</type>
        <referenceTo>Dealership__c</referenceTo>
        <relationshipName>Branches</relationshipName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The dealership this branch belongs to.</description>
    </fields>
    <sharingReasons>
        <fullName>TDM_Dealership__c</fullName>
        <label>TDM Dealership</label>
    </sharingReasons>
    <validationRules>
        <fullName>Dealership_Required</fullName>
        <active>true</active>
        <description>Every branch belongs to a dealership: dealership-scoped sharing (TdmRecordSharing) has nothing to grant on a record without one.</description>
        <errorConditionFormula>ISBLANK(Dealership__c)</errorConditionFormula>
        <errorDisplayField>Dealership__c</errorDisplayField>
        <errorMessage>Select the dealership this record belongs to.</errorMessage>
    </validationRules>
</CustomObject>